[gd_scene load_steps=5 format=3 uid="uid://deig76f0wa5is"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_uhfc1"]
[ext_resource type="FontFile" uid="uid://d3n5sd8aawen4" path="res://Font/LaTequila.ttf" id="2_ccnc6"]
[ext_resource type="FontFile" uid="uid://8vitech8gnur" path="res://Player/LaTequila.ttf" id="3_sbpax"]
[ext_resource type="Texture2D" uid="uid://c806cq4m12y1" path="res://New Piskel (10).png" id="4_h5v1l"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_uhfc1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574.625, 286)
scale = Vector2(1.57637, 1.325)
texture = ExtResource("4_h5v1l")

[node name="SilverBullet" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -429.0
offset_top = 79.0
offset_right = 430.0
offset_bottom = 205.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("2_ccnc6")
theme_override_font_sizes/font_size = 60
text = "Silver Bullet"
horizontal_alignment = 3
vertical_alignment = 3

[node name="StartButton" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.429
anchor_top = 0.739
anchor_right = 0.575
anchor_bottom = 0.838
offset_left = -0.208008
offset_top = 0.127991
offset_right = 4.59998
offset_bottom = -0.0240479
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 9
theme_override_fonts/font = ExtResource("3_sbpax")
theme_override_font_sizes/font_size = 27
action_mode = 0
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
